--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img src="MainHandPage2.PNG" alt="Grant Glaser Business Card" class="resume-hover-img"/>
                 </div>
                 <div class="resume-info">
-                    <img src="ResumeImg.png" alt="Grant Glaser Resume" class="resume-hover-img" />
+                    <img src="Resume2025Updated.jpg" alt="Grant Glaser Resume" class="resume-hover-img" />
                 </div>
             </div>
         </div>
