--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <footer class="footer-contact section" id="contact">
         <div class="footer-content">
             <h2 class="neon-text">Contact Me</h2>
-            <p>Email: <a href="mailto:GlaserGN@tiffin.edu">GlaserGn@tiffin.edu</a></p>
+            <p>Email: <a href="mailto:grantglaser4@gmail.com">grantglaser4@gmail.com</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/grant-glaser-386956290">My LinkedIn</a></p>
             <p>Phone Number: <a href="tel:6149566675">614-956-6675</a></p>
         </div>
